// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gilded Rose for Aged Brie increase quality if 1 day passes 1`] = `
[
  {
    "name": "Aged Brie",
    "quality": 1,
    "sellIn": 1,
  },
  {
    "name": "Aged Brie",
    "quality": 11,
    "sellIn": 2,
  },
  {
    "name": "Aged Brie",
    "quality": 31,
    "sellIn": 9,
  },
  {
    "name": "Aged Brie",
    "quality": 31,
    "sellIn": 29,
  },
]
`;

exports[`Gilded Rose for Aged Brie increase quality if 5 day passes 1`] = `
[
  {
    "name": "Aged Brie",
    "quality": 8,
    "sellIn": -3,
  },
  {
    "name": "Aged Brie",
    "quality": 17,
    "sellIn": -2,
  },
  {
    "name": "Aged Brie",
    "quality": 35,
    "sellIn": 5,
  },
  {
    "name": "Aged Brie",
    "quality": 35,
    "sellIn": 25,
  },
]
`;

exports[`Gilded Rose for normal items decrease quality if 1 day passes 1`] = `
[
  {
    "name": "test 1",
    "quality": 19,
    "sellIn": 9,
  },
  {
    "name": "test 2",
    "quality": 0,
    "sellIn": 1,
  },
  {
    "name": "test 3",
    "quality": 6,
    "sellIn": 4,
  },
  {
    "name": "Sulfur",
    "quality": 78,
    "sellIn": -1,
  },
  {
    "name": "Sulfur",
    "quality": 78,
    "sellIn": -2,
  },
  {
    "name": "Backstage concert",
    "quality": 19,
    "sellIn": 14,
  },
  {
    "name": "Test Backstage passes TAFKAL80ETC concert",
    "quality": 48,
    "sellIn": 9,
  },
  {
    "name": "TAFKAL80ETC",
    "quality": 48,
    "sellIn": 4,
  },
]
`;

exports[`Gilded Rose for normal items decrease quality if 5 day passes 1`] = `
[
  {
    "name": "test 1",
    "quality": 15,
    "sellIn": 5,
  },
  {
    "name": "test 2",
    "quality": 0,
    "sellIn": -3,
  },
  {
    "name": "test 3",
    "quality": 2,
    "sellIn": 0,
  },
  {
    "name": "Sulfur",
    "quality": 70,
    "sellIn": -5,
  },
  {
    "name": "Sulfur",
    "quality": 70,
    "sellIn": -6,
  },
  {
    "name": "Backstage concert",
    "quality": 15,
    "sellIn": 10,
  },
  {
    "name": "Test Backstage passes TAFKAL80ETC concert",
    "quality": 44,
    "sellIn": 5,
  },
  {
    "name": "TAFKAL80ETC",
    "quality": 44,
    "sellIn": 0,
  },
]
`;

exports[`Gilded Rose for normal items decrease quality if item's maximum item's day passed 1`] = `
[
  {
    "name": "test 1",
    "quality": 0,
    "sellIn": -5,
  },
  {
    "name": "test 2",
    "quality": 0,
    "sellIn": -13,
  },
  {
    "name": "test 3",
    "quality": 0,
    "sellIn": -10,
  },
  {
    "name": "Sulfur",
    "quality": 50,
    "sellIn": -15,
  },
  {
    "name": "Sulfur",
    "quality": 50,
    "sellIn": -16,
  },
  {
    "name": "Backstage concert",
    "quality": 5,
    "sellIn": 0,
  },
  {
    "name": "Test Backstage passes TAFKAL80ETC concert",
    "quality": 29,
    "sellIn": -5,
  },
  {
    "name": "TAFKAL80ETC",
    "quality": 24,
    "sellIn": -10,
  },
]
`;

exports[`Gilded Rose for normal items decrease quality if more then item's maximum item's day passed 1`] = `
[
  {
    "name": "test 1",
    "quality": 0,
    "sellIn": -6,
  },
  {
    "name": "test 2",
    "quality": 0,
    "sellIn": -14,
  },
  {
    "name": "test 3",
    "quality": 0,
    "sellIn": -11,
  },
  {
    "name": "Sulfur",
    "quality": 48,
    "sellIn": -16,
  },
  {
    "name": "Sulfur",
    "quality": 48,
    "sellIn": -17,
  },
  {
    "name": "Backstage concert",
    "quality": 3,
    "sellIn": -1,
  },
  {
    "name": "Test Backstage passes TAFKAL80ETC concert",
    "quality": 27,
    "sellIn": -6,
  },
  {
    "name": "TAFKAL80ETC",
    "quality": 22,
    "sellIn": -11,
  },
]
`;
